plugins {
    id 'java'
    id 'org.springframework.boot' version '3.3.5'
    id 'io.spring.dependency-management' version '1.1.6'
    id 'org.liquibase.gradle' version '2.2.0'
}

group = 'org.example.lab1'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '21'

repositories {
    mavenCentral()
}

ext {
    // Minimal Coverage
    minimumCoveragePerFile = 0.5
    filesExcludedFromCoverage = [
            "**/*MarketApplication.*",
            "**/config/*Configuration.*"
    ]
}

apply from: "${rootProject.projectDir}/gradle/test.gradle"
apply from: "${rootProject.projectDir}/gradle/jacoco.gradle"

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-aop'
    implementation 'org.springframework.boot:spring-boot-devtools'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.mapstruct:mapstruct:1.5.5.Final'
    implementation group: 'org.postgresql', name: 'postgresql', version: '42.7.4'
    implementation group: 'org.springdoc', name: 'springdoc-openapi-starter-webmvc-ui', version: '2.1.0'
    implementation 'org.springframework:spring-context:6.1.14'
    compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.34'
    implementation 'org.projectlombok:lombok-mapstruct-binding:0.2.0'
    implementation 'jakarta.servlet:jakarta.servlet-api:6.1.0'
    implementation 'org.thymeleaf:thymeleaf-spring6:3.1.2.RELEASE'
    implementation group: 'org.liquibase', name: 'liquibase-core', version: '4.30.0'
    testImplementation 'org.testcontainers:testcontainers:1.19.0'
    testImplementation 'org.testcontainers:postgresql:1.19.0'

    liquibaseRuntime 'org.liquibase:liquibase-core:4.30.0'
    liquibaseRuntime 'org.postgresql:postgresql:42.7.4'
    liquibaseRuntime 'info.picocli:picocli:4.7.3'
    annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'
    annotationProcessor 'org.projectlombok:lombok:1.18.34'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.34'
    testAnnotationProcessor 'org.mapstruct:mapstruct-processor:1.6.2'
    testImplementation 'org.testcontainers:testcontainers:1.20.4'
    testImplementation 'org.testcontainers:junit-jupiter:1.20.4'
    testImplementation 'com.h2database:h2'

    testImplementation 'org.projectlombok:lombok:1.18.34'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'
}


tasks.withType(JavaCompile) {
    options.compilerArgs += ['-parameters']
}

liquibase {
    activities {
        main {
            changelogFile 'src/main/resources/liquibase/db.changelog-master.xml'
            url 'jdbc:postgresql://localhost:5432/postgres'
            username 'postgres'
            password 'root'
            driver 'org.postgresql.Driver'
        }
    }
    runList = 'main'
}


test {
    useJUnitPlatform()

    environment 'DOCKER_HOST', System.getenv('DOCKER_HOST')
}

